internetgateway.tf
resource "aws_internet_gateway" "main-igw"{
	vpc_id = aws_vpc.main.id
	tags = {
	Name = "capstone-igw"
	}
}
